--- a/Forecast/app/build.gradle
+++ b/Forecast/app/build.gradle
@@ -33,8 +33,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
