--- a/Forecast/app/src/main/AndroidManifest.xml
+++ b/Forecast/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
