--- a/Forecast/app/build.gradle
+++ b/Forecast/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -52,4 +53,9 @@ dependencies {
     compile 'com.google.dagger:dagger:2.2'
 
     compile 'com.jayway.jsonpath:json-path:2.4.0'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'jp.wasabeef:blurry:2.1.1'
+
 }
