--- a/Forecast/app/build.gradle
+++ b/Forecast/app/build.gradle
@@ -42,24 +42,24 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:27.0.2'
     compile 'com.android.support:design:27.0.2'
 
+    // transparent status bar
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 
+    // Kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    compile 'org.jetbrains.anko:anko:0.10.1'
+    // Anko
+    compile 'org.jetbrains.anko:anko:0.10.2'
 
+    // RxJava
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.7'
 
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    // Dagger 2
+    kapt 'com.google.dagger:dagger-compiler:2.13'
+    compile 'com.google.dagger:dagger:2.13'
 
-    kapt 'com.google.dagger:dagger-compiler:2.2'
-    compile 'com.google.dagger:dagger:2.2'
-
-    compile 'com.jayway.jsonpath:json-path:2.4.0'
-
-    compile 'com.squareup.picasso:picasso:2.5.2'
-
+    // Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
