--- a/Forecast/build.gradle
+++ b/Forecast/build.gradle
@@ -1,7 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    apply from: 'dependencies.gradle'
+    ext {
+        kotlin_version = '1.3.72'
+        compose_version = '1.1.0-beta01'
+        minSdkVersion = 21
+        targetSdkVersion = 32
+        compileSdkVersion = 32
+    }
 
     repositories {
         jcenter()
