--- a/Forecast/dependencies.gradle
+++ b/Forecast/dependencies.gradle
@@ -14,6 +14,8 @@ versions.lifecycle = '2.5.0'
 
 versions.modo = '0.6.4'
 
+versions.retrofit = '2.9.0'
+
 versions.room = '2.4.2'
 
 /* Dependencies */
@@ -56,3 +58,12 @@ def room = [:]
 room.room = "androidx.room:room-runtime:$versions.room"
 room.compiler = "androidx.room:room-compiler:$versions.room"
 deps.room = room
+
+def squareup = [:]
+squareup.otto = "com.squareup:otto:$versions.otto"
+squareup.retrofit = "com.squareup.retrofit2:retrofit:$versions.retrofit"
+squareup.adapter_rxjava = "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
+squareup.converter_gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
+squareup.okhttp = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp"
+squareup.kotlinx_serialization_converter = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:$versions.kotlinx_serialization_converter"
+deps.squareup = squareup
