--- a/Forecast/app/build.gradle
+++ b/Forecast/app/build.gradle
@@ -33,6 +33,11 @@ dependencies {
     androidTestCompile('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    implementation(
+            project(':core:data'),
+    )
+
     implementation 'androidx.appcompat:appcompat:1.0.0'
     compile 'androidx.cardview:cardview:1.0.0'
     compile 'androidx.constraintlayout:constraintlayout:1.1.3'
