--- a/Forecast/app/build.gradle
+++ b/Forecast/app/build.gradle
@@ -44,6 +44,7 @@ android {
 dependencies {
     implementation(
             project(':core:data'),
+            project(':core:di'),
 
             deps.compose.activity,
             deps.compose.ui,
