--- a/Forecast/app/build.gradle
+++ b/Forecast/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation(
             project(':core:data'),
             project(':core:di'),
+            project(':core:redux'),
+            project(':core:store'),
+            project(':core:ui'),
             project(':feature:select_city'),
 
             deps.compose.activity,
