--- a/Forecast/settings.gradle
+++ b/Forecast/settings.gradle
@@ -3,6 +3,7 @@ include(
         ':core:data',
         ':core:di',
         ':core:redux',
+        ':core:store',
         ':core:ui',
         ':feature:select_city'
 )
