di for select city

--- a/Forecast/core/di/build.gradle
+++ b/Forecast/core/di/build.gradle
@@ -2,7 +2,12 @@ apply from: "$rootDir/common.gradle"
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    implementation(deps.dagger.dagger,)
+    implementation(
+            project(':core:redux'),
+            project(':core:store'),
+
+            deps.dagger.dagger,
+    )
 
     kapt(deps.dagger.compiler)
 }
