--- a/Forecast/feature/select_city/build.gradle
+++ b/Forecast/feature/select_city/build.gradle
@@ -10,6 +10,8 @@ android {
 dependencies {
     implementation(
             project(':core:di'),
+            project(':core:redux'),
+            project(':core:store'),
 
             deps.compose.ui,
             deps.compose.material,
@@ -17,7 +19,9 @@ dependencies {
             deps.compose.ui_tooling_preview,
             deps.dagger.dagger,
             deps.lifecycle.viewmodel,
-            deps.lifecycle.viewmodel_compose
+            deps.lifecycle.viewmodel_compose,
+            deps.modo.compose,
+            deps.modo.modo,
     )
 
     kapt(
