--- a/Forecast/core/di/build.gradle
+++ b/Forecast/core/di/build.gradle
@@ -1,12 +1,30 @@
 apply from: "$rootDir/common.gradle"
 apply plugin: 'kotlin-kapt'
 
+android {
+    buildFeatures {
+        compose = true
+    }
+
+    kotlinOptions {
+        // Удалить после перехода на Kotlin 1.6.10
+        // https://stackoverflow.com/questions/70992947/how-do-i-resolve-error-message-inheritance-from-an-interface-with-jvmdefault
+        freeCompilerArgs += ["-Xjvm-default=all"]
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+    }
+}
+
 dependencies {
     implementation(
             project(':core:redux'),
             project(':core:store'),
 
             deps.dagger.dagger,
+            deps.lifecycle.viewmodel,
+            deps.lifecycle.viewmodel_compose
     )
 
     kapt(deps.dagger.compiler)
