--- a/Forecast/feature/select_city/build.gradle
+++ b/Forecast/feature/select_city/build.gradle
@@ -9,6 +9,8 @@ android {
 
 dependencies {
     implementation(
+            project(':core:common'),
+            project(':core:data'),
             project(':core:di'),
             project(':core:redux'),
             project(':core:store'),
