--- a/Forecast/app/build.gradle
+++ b/Forecast/app/build.gradle
@@ -48,6 +48,7 @@ android {
 
 dependencies {
     implementation(
+            project(':core:common'),
             project(':core:data'),
             project(':core:di'),
             project(':core:redux'),
