добавил WeatherInteractor.kt

--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -6,12 +6,10 @@ dependencies {
             project(':core:di'),
 
             deps.dagger.dagger,
-
             deps.coroutines.coroutines,
             deps.squareup.retrofit,
+            deps.squareup.converter_moshi,
     )
 
-    kapt(
-            deps.dagger.compiler
-    )
+    kapt(deps.dagger.compiler)
 }
