--- a/core/di/build.gradle
+++ b/core/di/build.gradle
@@ -1,5 +1,6 @@
 apply from: "$rootDir/common.gradle"
 apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-parcelize'
 
 android {
     buildFeatures {
