--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -4,6 +4,10 @@ android {
     buildFeatures {
         compose true
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.2"
+    }
 }
 
 dependencies {
