--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,17 +2,20 @@
 
 def versions = [:]
 
-versions.compose = '1.2.0'
-versions.compose_activity = '1.3.1'
-versions.compose_material3 = '1.0.0-alpha13'
+versions.compose = '1.3.2'
+versions.compose_activity = '1.6.1'
+// https://developer.android.com/jetpack/androidx/releases/compose-material
+versions.compose_material = '1.3.1'
+// https://developer.android.com/jetpack/androidx/releases/compose-material3
+versions.compose_material3 = '1.0.1'
 
 versions.coroutines = '1.6.4'
 
-versions.dagger = '2.40.5'
+versions.dagger = '2.44.2'
 
 versions.lifecycle = '2.5.0'
 
-versions.modo = '0.6.4'
+versions.modo = '0.7.1'
 
 versions.retrofit = '2.9.0'
 
@@ -32,7 +35,7 @@ deps.coroutines = coroutines
 
 def compose = [:]
 compose.activity = "androidx.activity:activity-compose:$versions.compose_activity"
-compose.material = "androidx.compose.material:material:$versions.compose"
+compose.material = "androidx.compose.material:material:$versions.compose_material"
 compose.material3 = "androidx.compose.material3:material3:$versions.compose_material3"
 compose.ui = "androidx.compose.ui:ui:$versions.compose"
 compose.ui_tooling =  "androidx.compose.ui:ui-tooling:$versions.compose"
@@ -50,8 +53,7 @@ lifecycle.viewmodel_compose = "androidx.lifecycle:lifecycle-viewmodel-compose:$v
 deps.lifecycle = lifecycle
 
 def modo = [:]
-modo.modo = "com.github.terrakok:modo:$versions.modo"
-modo.compose = "com.github.terrakok:modo-render-android-compose:$versions.modo"
+modo.modo = "com.github.terrakok:modo-compose:$versions.modo"
 deps.modo = modo
 
 def room = [:]
