--- a/feature/select_city/build.gradle
+++ b/feature/select_city/build.gradle
@@ -5,6 +5,10 @@ android {
     buildFeatures {
         compose true
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.2"
+    }
 }
 
 dependencies {
