--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -6,7 +6,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.3.2"
+        kotlinCompilerExtensionVersion compose_version
     }
 }
 
