--- a/feature/select_city/build.gradle
+++ b/feature/select_city/build.gradle
@@ -7,7 +7,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.3.2"
+        kotlinCompilerExtensionVersion compose_version
     }
 }
 
