--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 
             deps.dagger.dagger,
             deps.coroutines.coroutines,
+            deps.gson.gson,
             deps.squareup.retrofit,
             deps.squareup.converter_moshi,
     )
