--- a/feature/weather/build.gradle
+++ b/feature/weather/build.gradle
@@ -5,6 +5,10 @@ android {
     buildFeatures {
         compose true
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+    }
 }
 
 dependencies {
