перенес картинки в модуль core:ui

--- a/feature/weather/build.gradle
+++ b/feature/weather/build.gradle
@@ -18,6 +18,7 @@ dependencies {
             project(':core:di'),
             project(':core:redux'),
             project(':core:store'),
+            project(':core:ui'),
 
             deps.compose.ui,
             deps.compose.material,
