10: Контейнер для weather

--- a/core/common/build.gradle
+++ b/core/common/build.gradle
@@ -8,5 +8,6 @@ dependencies {
 
             deps.coroutines.coroutines,
             deps.lifecycle.viewmodel,
+            deps.modo.modo,
     )
 }
