--- a/feature/weather_week/build.gradle
+++ b/feature/weather_week/build.gradle
@@ -13,6 +13,11 @@ android {
 
 dependencies {
     implementation(
+            project(':core:common'),
+            project(':core:data'),
+            project(':core:di'),
+            project(':core:redux'),
+            project(':core:store'),
             project(':core:ui'),
 
             deps.compose.ui,
@@ -20,6 +25,8 @@ dependencies {
             deps.compose.material3,
             deps.compose.ui_tooling_preview,
             deps.dagger.dagger,
+            deps.lifecycle.viewmodel,
+            deps.lifecycle.viewmodel_compose,
     )
 
     kapt(
